debugged dropdown menu and spacing issues, working on queries in client directory

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,11 +9,12 @@
 }
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-html, body {
+html,
+body {
   /* add font from google fonts */
   width: 100%;
   height: 100%;
@@ -37,7 +38,7 @@ html, body {
 .all-btns:hover {
   background-color: var(--tertiary);
   border: 1px solid var(--black);
-  color:  var(--black);
+  color: var(--black);
 }
 
 /* HEADER */
@@ -67,4 +68,9 @@ footer {
 
 
 /* MODAL */
-
+.modalTitle {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
